--- a/rag_v2.ipynb
+++ b/rag_v2.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "from huggingface_hub import login\n",
     "\n",
-    "login(token=\"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\", add_to_git_credential=True)"
+    "login(token=\"\", add_to_git_credential=True)"
    ]
   },
   {
